--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cappadocia</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/nullstyle.css">
 </head>
 
 <body>
 
   <header class="header">
-
+    <div class="container">
+      <div class="header__top">
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Маршрут</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Отель</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Стоимость</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="tel:+380665557776" class="header__phone">+38(066)555-77-76</a>
+      </div>
+      <h1 class="header__title">
+        Cappadocia
+        <span>Эксклюзивный тур</span>
+      </h1>
+    </div>
   </header>
 
 </body>
