--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cappadocia</title>
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nullstyle.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="container header__container">
       <div class="header__top">
         <nav class="menu">
           <ul class="menu__list">
@@ -36,7 +37,57 @@
       </h1>
     </div>
   </header>
+  <section class="fairy-tail page-section">
+    <div class="container">
+      <h3 class="fairy-tail__title title">
+        Fairy tail
+        <span>Сказочная страна чудес</span>
+      </h3>
+    </div>
+    <div class="fairy-tail__inner">
+      <div class="fairy-tail__slider">
+        <div class="fairy-tail__item"><img src="images/fairy-tail-1.jpg" alt="fairy-tail-1"></div>
+        <div class="fairy-tail__item"><img src="images/fairy-tail-2.jpg" alt="fairy-tail-2"></div>
+        <div class="fairy-tail__item"><img src="images/fairy-tail-3.jpg" alt="fairy-tail-3"></div>
+      </div>
+      <div class="fairy-tail__content">
+        <div class="fairy-tail__container">
+          <div class="fairy-tail__body">
+            <p class="fairy-tail__text">
+              Каппадокия - сказочная страна воздушных шаров, сырных домиков, разноцветных долин и волшебных рассветов!
+              Сюда приезжают, чтобы увидеть природные чудеса, полетать на воздушном шаре и конечно же сделать миллион
+              красивых фотографий!
+            </p>
+            <p class="fairy-tail__text">
+              Участников тура ждёт профессиональная фотосессия от лучших фотографов Каппадокии!
+              Ведь именно за волшебными фото на рассвете на фоне воздушных шаров сюда приезжают люди со всего мира!
+            </p>
+            <div class="fairy-tail__body-title">
+              Также Вы увидите:
+            </div>
+            <ul class="fairy-tail__list">
+              <li>Музей на открытом воздухе в Гёреме</li>
+              <li>Ущелье Ыхлара и монастырь Селиме</li>
+              <li>Подземные города</li>
+              <li>Крепость Учхисар</li>
+              <li>Зельве и Пашабаг</li>
+            </ul>
+            <p class="fairy-tail__text">
+              и многие другие достпримечательности.
+            </p>
+            <p class="fairy-tail__text">
+              Местная кухня — один из поводов посетить Каппадокию, здесь есть рестораны на
+              любой бюджет.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
