--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cappadocia</title>
   <link rel="stylesheet" href="css/nullstyle.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -131,9 +132,54 @@
       </div>
     </div>
   </section>
+  <section class="hotel page-section">
+    <div class="container">
+      <h3 class="hotel__title title">
+        Hotel
+        <span>Sultan Cave Suites</span>
+      </h3>
+      <div class="hotel__inner">
+        <img class="hotel__images" src="images/hotel.jpg" alt="Hotel-images">
+        <div class="hotel__content">
+          <p class="hotel__text">
+            В этом уникальном отеле, расположенном на вершине холма Айдынлы,
+            вы можете забронировать высеченные в скале номера, обставленные антикварной
+            мебелью со всей Турции. С солнечной террасы отеля открывается прекрасный
+            панорамный вид на Национальный парк Гереме.
+          </p>
+          <p class="hotel__text">
+            Большинство номеров отеля Sultan Cave Suites высечены в скале,
+            что обеспечивает прохладу и покой. Все номера оборудованы гостиной зоной
+            и современной ванной комнатой. В большинстве из них есть собственная
+            терраса или балкон.
+          </p>
+          <p class="hotel__text">
+            Отель Cave Suites Sultan располагает изысканным рестораном, где подают
+            фирменные блюда региона Каппадокии. После ужина, пройдя на террасу,
+            вы сможете заказать напиток и полюбоваться закатом солнца над деревней.
+          </p>
+          <div class="hotel__gallery">
+            <a href="images/hotel__gallery-big-1.jpg" data-fancybox="images" data-width="560" data-height="300">
+              <img src="images/hotel__gallery-1.jpg" alt="Х">
+            </a>
+            <a href="images/hotel__gallery-big-2.jpg" data-fancybox="images" data-width="560" data-height="300">
+              <img src="images/hotel__gallery-2.jpg" alt="У">
+            </a>
+            <a href="images/hotel__gallery-big-3.jpg" data-fancybox="images" data-width="560" data-height="300">
+              <img src="images/hotel__gallery-3.jpg" alt="У">
+            </a>
+            <a href="images/hotel__gallery-big-4.jpg" data-fancybox="images" data-width="560" data-height="300">
+              <img src="images/hotel__gallery-4.jpg" alt="Й">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
