--- a/index.html
+++ b/index.html
@@ -229,6 +229,33 @@
       </div>
     </div>
   </section>
+  <section class="contacts page-section">
+    <div class="container">
+      <div class="contacts__inner">
+        <div class="contacts__content">
+          <div class="contacts__info">
+            <div class="contacts__date">
+              1.07.2020
+              <span>Ближайшая дата тура</span>
+            </div>
+            <div class="contacts__price">
+              490$
+              <span>Стоимость</span>
+            </div>
+          </div>
+          <form class="contacts__form">
+            <h4 class="contacts__form-title">
+              Оставить заявку или задать вопрос
+            </h4>
+            <input class="contact__form-input contacts__form-name" type="text" placeholder="Имя">
+            <input class="contact__form-input contacts__form-phone" type="tel" placeholder="Телефон">
+            <button class="contacts__form-btn" type="submit">ОСТАВИТЬ ЗАЯВКУ</button>
+          </form>
+        </div>
+        <img class="contacts__images" src="images/contacts__images.jpg" alt="contacts__images">
+      </div>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
