--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">Маршрут</a>
+              <a href="#our-trip" class="menu__list-link">Маршрут</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">Отель</a>
+              <a href="#hotel" class="menu__list-link">Отель</a>
             </li>
             <li class="menu__list-item">
-              <a href="#" class="menu__list-link">Стоимость</a>
+              <a href="#price" class="menu__list-link">Стоимость</a>
             </li>
           </ul>
         </nav>
@@ -85,8 +85,7 @@
       </div>
     </div>
   </section>
-  <!--   
-  <section class="our-trip page-section">
+  <section id="our-trip" class="our-trip page-section">
     <div class="our-trip__inner">
       <div class="our-trip__content">
         <div class="our-trip__container">
@@ -122,7 +121,7 @@
               <li>Трансфер в Анкару</li>
               <li>Вылет в Киев</li>
             </ul>
-            <a href="#" class="our-trip__btn">ЗАБРОНИРОВАТЬ</a>
+            <a href="#contacts" class="our-trip__btn">ЗАБРОНИРОВАТЬ</a>
           </div>
         </div>
       </div>
@@ -133,7 +132,7 @@
       </div>
     </div>
   </section>
-  <section class="hotel page-section">
+  <section id="hotel" class="hotel page-section">
     <div class="container">
       <h3 class="hotel__title title">
         Hotel
@@ -177,7 +176,7 @@
       </div>
     </div>
   </section>
-  <section class="price page-section">
+  <section id="price" class="price page-section">
     <div class="container">
       <h3 class="price__title title">
         Price
@@ -230,7 +229,7 @@
       </div>
     </div>
   </section>
-  <section class="contacts page-section">
+  <section id="contacts" class="contacts page-section">
     <div class="container">
       <div class="contacts__inner">
         <div class="contacts__content">
@@ -328,8 +327,7 @@
         </div>
       </div>
     </div>
-  </footer> 
--->
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
